# Haruki-Drawing-API

./: .dockerignore  .gitignore  .python-version  AGENTS.md  CHANGELOG_AND_FIXES.md  CLAUDE.md  DESEER_ALIGNMENT_SUMMARY.md  Dockerfile  README.md  compose_box_image.json  compose_card_detail_image.json  compose_card_detail_image_2.json  compose_card_detail_image_3.json  compose_card_list_image.json  configs.docker.yaml  configs.yaml  docker-compose.yaml  pjsekai_scores_rs-0.1.0-cp314-cp314t-macosx_11_0_arm64.whl  pjsekai_scores_rs-0.1.0-cp314-cp314t-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pjsekai_scores_rs-0.1.0-cp314-cp314t-win_amd64.whl  pyproject.toml  run.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker-publish.yml  docker.yml  free-threaded-smoke.yml  quick-check.yml  skia-wheels.yml
docker/skia-wheels/: .gitignore
docs/: custom-profile-skia-feasibility.md  optimizations.md  rust-skia-renderer-migration.md  skia-migration-restart-plan.md  skia-migration-todo.md  skia-pillow-coverage-gaps.md
rust/haruki_skia_renderer/: Cargo.toml
rust/haruki_skia_renderer/src/: card_scene.rs  interp.rs  ir.rs  lib.rs
rust/haruki_skia_renderer/tests/fixtures/: sdf_quad_face_only_scalars.json  sdf_quad_gradient_bold_scalars.json  sdf_quad_underlay_scalars.json
scripts/: bench_custom_profile_glyph_cache.py  benchmark_gil_compare.py  build_card_list_payload.py  compare_card_render.py  concurrent_fetch_images.py  gen_sdf_quad_golden.py  generate_sk_trend_sample.py  skia_bench.py  skia_legacy_baseline.py  skia_parity_sweep.py  skia_warm_parity.py  sync_card_list_assets.py
scripts/parity_payloads/: common.py  gen_card.py  gen_chart.py  gen_custom_profile.py  gen_deck_event.py  gen_gacha_costume_vlive_edu.py  gen_music_score.py  gen_mysekai.py  gen_profile.py  gen_sk_misc_stamp.py  run_all.py
src/: settings.py
src/base/: card_utils.py  configs.py  draw.py  painter.py  plot.py  utils.py
src/card/: JSON_PARAMETER_DOCUMENTATION.md  drawer.py
src/core/: debug.py  diagnostics.py  health.py  heavy_render_pool.py  main.py  utils.py
src/core/pjsk/: __init__.py  card.py  chart.py  command_help.py  costume.py  deck.py  education.py  event.py  gacha.py  honor.py  inventory.py  misc.py  music.py  mysekai.py  profile.py  score.py  sk.py  stamp.py  vlive.py
src/deck/: drawer.py
src/event/: drawer.py
src/gacha/: drawer.py
src/honor/: drawer.py
src/music/: drawer.py  mode.py  model.py
src/mysekai/: drawer.py  model.py
src/profile/: drawer.py  model.py  profile.py
src/score/: drawer.py  model.py
src/sekai/base/: README.md  __init__.py  configs.py  draw.py  img_utils.py  painter.py  plot.py  timezone.py  triangle_bg.py  utils.py
src/sekai/card/: drawer.py  model.py
src/sekai/chart/: drawer.py  model.py
src/sekai/chart/pjsekai/pjsekai-scores-rs/: Cargo.toml
src/sekai/chart/pjsekai/pjsekai-scores-rs/src/: drawing.rs  line.rs  main.rs  python.rs  rebase.rs  score.rs
src/sekai/chart/pjsekai/pjsekai-scores-rs/src/notes/: directional.rs  slide.rs
src/sekai/chart/pjsekai/scores/: __init__.py  __main__.py  drawing.py  line.py  lyric.py  meta.py  rebase.py  score.py
src/sekai/chart/pjsekai/scores/notes/: __init__.py  base.py  directional.py  event.py  slide.py  tap.py
src/sekai/chart/pjsekai/scores/types/: fraction.py
src/sekai/costume/: drawer.py  model.py
src/sekai/deck/: drawer.py  model.py
src/sekai/education/: drawer.py  model.py
src/sekai/event/: drawer.py  model.py
src/sekai/gacha/: drawer.py  model.py
src/sekai/honor/: drawer.py  model.py  skia.py  widget.py
src/sekai/inventory/: __init__.py  drawer.py  model.py
src/sekai/misc/: drawer.py  model.py
src/sekai/music/: drawer.py  model.py
src/sekai/mysekai/: drawer.py  housing_drawer.py  model.py
src/sekai/profile/: drawer.py  model.py
src/sekai/profile/custom_profile/: __init__.py  cache.py  drawer.py  renderer.py  skia.py  split.py  svg.py
src/sekai/score/: drawer.py  model.py
src/sekai/sk/: drawer.py  model.py
src/sekai/skia_renderer/: __init__.py  canvas.py  card_box.py  card_common.py  card_list.py  card_render.py  ir_builder.py  ir_painter.py  payload_cache.py  render_stats.py
src/sekai/stamp/: drawer.py  model.py
src/sekai/vlive/: drawer.py  model.py
src/sk/: drawer.py
src/stamp/: drawer.py  model.py
src/user/: __init__.py  drawer.py
tests/: conftest.py  test_api_contracts.py  test_asset_signature_cache_key.py  test_base_utils.py  test_build_card_list_payload.py  test_card_box_distribution.py  test_card_thumbnail_box.py  test_cgroup_readiness.py  test_chart.py  test_core_utils.py  test_costume.py  test_costume_preview_crop.py  test_custom_profile_process_caches.py  test_custom_profile_renderer.py  test_custom_profile_skia.py  test_debug_request_dump.py  test_deck_title.py  test_diagnostics.py  test_event_planner.py  test_event_wl_timeline.py  test_font_self_check.py  test_gacha.py  test_honor_drawer.py  test_image_response.py  test_image_source.py  test_ir_builder.py  test_ir_builder_font_cache.py  test_ir_painter.py  test_modular_profile.py  test_music_custom_chart.py  test_profile_card_skia.py  test_render_stats.py  test_route_render_contract.py  test_script_imports.py  test_settings.py  test_sk_drawer.py  test_skia_card_box.py  test_skia_card_list.py  test_skia_extended_primitives.py  test_skia_parity.py  (+6 more)
