[project]
name = "Haruki-Drawing-API"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiopath>=0.7.7",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "hypercorn>=0.17.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "emoji==2.0.0",
    "pillow>=11.3.0",
    "pilmoji==2.0.4",
    "psutil>=7.0.0",
    "redis>=6.4.0",
    "ruff>=0.12.10",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "svgwrite>=1.4.3",
    "aiohttp>=3.13.3",
    "uvloop>=0.22.1",
    "coloredlogs>=15.0.1",
]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
