[package]
name = "haruki_skia_renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "haruki_skia_renderer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skia-safe = "0.99.0"

[profile.release]
lto = "thin"
codegen-units = 1
