[package]
name = "haruki_skia_renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "haruki_skia_renderer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# "svg" builds Skia's SVG module, required to rasterize OT-SVG color emoji
# (TwitterColorEmoji-SVGinOT) on the FreeType backend (Linux); without it those glyphs
# fall back to monochrome outlines in production containers.
skia-safe = { version = "0.99.0", features = ["svg"] }

[profile.release]
lto = "thin"
codegen-units = 1
