[package]
name = "haruki_skia_renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "haruki_skia_renderer"
crate-type = ["cdylib"]

[dependencies]
moka = { version = "0.12.11", features = ["sync"] }
mtpng = "0.4.1"
rayon = "1.10.0"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Default features only: the "svg" module (needed for OT-SVG color emoji) has no
# prebuilt skia-binaries variant, forcing a from-source Skia build that breaks on CI
# toolchains. Color emoji therefore uses a COLR-format font (TwemojiMozilla), which
# the default FreeType backend renders natively.
skia-safe = "0.99.0"

[profile.release]
lto = "thin"
codegen-units = 1
